--- a/jets.css
+++ b/jets.css
@@ -268,6 +268,23 @@ h5 {
       border-bottom-right-radius: 20px;
 }
 
+#restPop {
+  display: none;
+      /* transform: translateY(-100%); */
+      /* height: 11vh; */
+      padding: 4vh;
+      font-size: 1em;
+      position: absolute;
+      width: 100%;
+      top: 0;
+      height: 100%;
+      border-bottom: 5px solid #28b78d;
+      background-color: #11411e;
+      z-index: 100000;
+      border-top-left-radius: 20px;
+      border-bottom-right-radius: 20px;
+}
+
 #dropdownMenuButton {
     font-family: "Navine" !important;
 }
@@ -293,6 +310,12 @@ h5 {
   border-radius: 25px;
   padding: 5px;
   margin-bottom: 30px;
+}
+
+.restructureText {
+  color: #e8e8e8 !important;
+  background-color: #00734d !important;
+  font-size: 1.8vh;
 }
 
 #broadSort {
@@ -683,6 +706,7 @@ transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 
 #pickTradeTeamsCont {
   display: none;
+  height:1000vh;
 }
 
 .pickTeam {
